# incolumepy.makefilelicense

./: Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: poetry-publish-automaticly.yml  publish-to-test-pypi.yml  publish_automatic.yml  publish_manual.yml  python-publish.yml  tests.yml  upload-python-package-publish.yml
incolumepy/makefilelicense/: __init__.py  licenses.py  metrics.py  version.txt
incolumepy/makefilelicense/exceptions/: __init__.py
incolumepy/makefilelicense/licenses/: port1492_20111005.txt
tests/: __init__.py  conftest.py  test_incolumepy_makefilelicense.py  test_incolumepy_makefilelicense_metrics.py
