[tool.poetry]
name = "incolumepy.makefileLicense"
version = "0.1.1-alpha.0"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]
packages=[
    {include = 'incolumepy/makefilelicense', from=''},
]
[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
toml = {extras = ["tomli"], version = "^0.10.2"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
