[tool.poetry]
name = "incolumepy.makefileLicense"
version = "0.1.1-alpha.3"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]
packages=[
    {include = 'incolumepy/makefilelicense', from=''},
]
[tool.poetry.scripts]
license-agpl = 'incolumepy.makefilelicense.licenses:license_agpl'
license-gpl = 'incolumepy.makefilelicense.licenses:license_gpl'
license-lgpl = 'incolumepy.makefilelicense.licenses:license_lgpl'
license-apache = 'incolumepy.makefilelicense.licenses:license_apache'
license-bsl = 'incolumepy.makefilelicense.licenses:license_bsl'
license-mpl = 'incolumepy.makefilelicense.licenses:license_mpl'
license-mit = 'incolumepy.makefilelicense.licenses:license_mit'
unlicense = 'incolumepy.makefilelicense.licenses:unlicense'

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
toml = {extras = ["tomli"], version = "^0.10.2"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
